# ml-from-scratch

./: README.md  pyproject.toml
benchmarks/statistics/descriptive/: maximum.py  mean.py  median.py  minimum.py  mode.py  range.py  variance.py
examples/statistics/descriptive/: maximum.py  mean.py  median.py  minimum.py  mode.py  range.py  variance.py
notes/statistics/: descriptive.md
notes/statistics/descriptive/: maximum.md  median.md  minimum.md  mode.md  range.md  variance.md
src/ml_from_scratch/statistics/descriptive/: descriptive.py  maximum.py  mean.py  median.py  minimum.py  mode.py  range.py  variance.py
tests/statistics/descriptive/: test_maximum.py  test_mean.py  test_median.py  test_minimum.py  test_mode.py  test_range.py  test_variance_sample.py
